--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,13 @@ android {
 dependencies {
     // ARCore library
     implementation 'com.google.ar:core:1.6.0'
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.6.0"
-
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.6.0'
     // Obj - a simple Wavefront OBJ file loader
     // https://github.com/javagl/Obj
     implementation 'de.javagl:obj:0.2.1'
-
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation project(':lib')
+    implementation project(':openCVLibrary343')
 }
 apply plugin: 'com.google.ar.sceneform.plugin'
