--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,12 @@ android {
 dependencies {
     // ARCore library
     implementation 'com.google.ar:core:1.5.0'
-
     // Obj - a simple Wavefront OBJ file loader
     // https://github.com/javagl/Obj
     implementation 'de.javagl:obj:0.2.1'
-
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
     //implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation project(':openCVLibrary343')
 }
